tests/machine/x/cobol/tail_recursion.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/tail_recursion.cob:8: error: syntax error, unexpected USING
/workspace/mochi/tests/machine/x/cobol/tail_recursion.cob: in paragraph 'SUM_REC':
/workspace/mochi/tests/machine/x/cobol/tail_recursion.cob:13: error: syntax error, unexpected PROCEDURE
/workspace/mochi/tests/machine/x/cobol/tail_recursion.cob:14: error: 'N' is not defined
/workspace/mochi/tests/machine/x/cobol/tail_recursion.cob:15: error: 'ACC' is not defined
/workspace/mochi/tests/machine/x/cobol/tail_recursion.cob:17: error: syntax error, unexpected END-IF
/workspace/mochi/tests/machine/x/cobol/tail_recursion.cob:18: error: syntax error, unexpected USING

